resolve route validators and add mapping stock routes